# GraphBin

./: .gitignore  .hgignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  graphbin  graphbin.py  graphbin_SGA.py  graphbin_SPAdes.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tutorial.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  testing_python_app.yml  testing_python_conda.yml
bidirectionalmap/: bidirectionalmap.py
docs/: citation.md  index.md  install.md  preprocess.md  requirements.txt  support.md  testing.md  tutorial.md  usage.md  workflow.md
graphbin/: graphbin_Canu.py  graphbin_Flye.py  graphbin_Func.py  graphbin_MEGAHIT.py  graphbin_Miniasm.py  graphbin_Options.py  graphbin_SGA.py  graphbin_SPAdes.py
graphbin_utils/: graphbin_Canu.py  graphbin_Flye.py  graphbin_Func.py  graphbin_MEGAHIT.py  graphbin_Miniasm.py  graphbin_Options.py  graphbin_SGA.py  graphbin_SPAdes.py
graphbin_utils/bidirectionalmap/: bidirectionalmap.py
graphbin_utils/labelpropagation/: labelprop.py
labelpropagation/: labelprop.py
src/: graphbin_Canu.py  graphbin_Flye.py  graphbin_MEGAHIT.py  graphbin_Miniasm.py  graphbin_SGA.py  graphbin_SPAdes.py
src/bidirectionalmap/: bidirectionalmap.py
src/graphbin/: __init__.py  cli.py  graphbin_Canu.py  graphbin_Flye.py  graphbin_Func.py  graphbin_MEGAHIT.py  graphbin_Miniasm.py  graphbin_SGA.py  graphbin_SPAdes.py
src/labelpropagation/: labelprop.py
support/: README.md  SupportREADME.md  flye_gfa2fasta.py  flye_miniasm_gfa2fasta.py  gfa2fasta.py  miniasm_gfa2fasta.py  prepResult.py  prep_result.py  visualiseResult_Flye_Canu.py  visualiseResult_Flye_Canu_Miniasm.py  visualiseResult_MEGAHIT.py  visualiseResult_SGA.py  visualiseResult_SPAdes.py  visualise_result_Flye_Canu_Miniasm.py  visualise_result_MEGAHIT.py  visualise_result_SGA.py  visualise_result_SPAdes.py
support scripts/: SupportREADME.md  prepResult.py  visualiseResult_SGA.py  visualiseResult_SPAdes.py
test data/ESC_SGA/: maxbin_contig_bins.csv  metawatt_contig_bins.csv  taxaassign_ground_truth_labelling.txt  (+1 more)
tests/: test_arguments.py  test_bidirectional_map.py  test_graphbin.py
(+98 files in other folders)
